# soccer-video-analytics

./: .gitignore  README.md  pyproject.toml  run.py  run_utils.py  team_config_example copy.json  team_config_example.json
inference/: __init__.py  base_classifier.py  base_detector.py  box.py  colors.py  converter.py  filters.py  hsv_classifier.py  inertia_classifier.py  types.py  yolov5.py
soccer/: ball.py  draw.py  match.py  pass_event.py  player.py  team.py
tests/: conftest.py  test_ball.py  test_box.py  test_dependencies.py  test_inference.py  test_player.py  test_team.py
